--- a/index.css
+++ b/index.css
@@ -80,7 +80,7 @@ a{
   position: absolute;
   top: 90px;
   right: 1.9rem;
-  padding: 2rem 4.5rem;
+  padding: 2rem 4.2rem;
   background-color:white;
 }
 .details-onclick a{
@@ -390,6 +390,11 @@ a{
   .header-text{
     width: 80%;
     padding:0;
+  }
+  .header-text h1 {
+    color:white;
+    letter-spacing: 3px;
+    font-size: 2.5rem;
   }
   .icon-arrow{
     margin-bottom: 8rem;
